@@ -1,3 +1,4 @@
+# encoding: UTF-8
 require 'will_paginate.rb'
 require 'wice_grid_misc.rb'
 require 'helpers/js_calendar_helpers.rb'
