@@ -1,3 +1,4 @@
+# encoding: UTF-8
 class WiceGridSerializedQuery < ActiveRecord::Base  #:nodoc:
   serialize :query
 
